수정과 삭제

--- a/src/main/resources/templates/item/itemForm.html
+++ b/src/main/resources/templates/item/itemForm.html
@@ -56,11 +56,13 @@
                             </select>
                         </div>
                     </div>
+                    <!--이미지 미리보기-->
                     <div class="col-12">
                         <div class="row  main imgpreview">
 
                         </div>
-                        <div class="row imgpreviewinput imgpreview">
+                        <div class="row row-cols-md-3 imgpreviewinput imgpreview">
+
 
                         </div>
 
@@ -78,7 +80,7 @@
                     </div>
 
                     <div class="col-12">
-                       <button class="btn btn-dark">저장</button>
+                       <button type="submit" class="btn btn-dark">저장</button>
                        <button type="button">목록</button>
                     </div>
                 </div>
@@ -101,7 +103,10 @@
 
 
            $("form").on("submit", function (e) {
+               console.log("폼 제출 시 실행됨");
+
                if(itemNmValid()){
+                   console.log("zzzzzzz");
                    return false
                }
                if($(".main").find('input:eq(0)')  == ""){
@@ -178,6 +183,7 @@
            }
            function readURL(input) {
                if (input.files && input.files[0]) {
+                   console.log("선택된 파일:", input.files[0]); // 선택된 파일을 콘솔에 출력
 
                    var reader = new FileReader();
                    reader.onload = function(e) {
@@ -185,22 +191,24 @@
 
                        inputtag.type = "file"
                        inputtag.name = "multipartFile"
-                       // inputtag.files = input.files
+                       //inputtag.files = input.files //참조값 주소
+
                        const dataTranster = new DataTransfer();
                        const fileDatas = Array.from(input.files);
-/*신규 파일데이터는..
-new DataTransfer();
-이걸로 files 라는 객체를 만들수 있어서..
-이걸로 만들어서 배열 돌리면서 추가추가 한거임*/
+                       /*신규 파일데이터는..
+                       new DataTransfer();
+                       이걸로 files 라는 객체를 만들수 있어서..
+                       이걸로 만들어서 배열 돌리면서 추가추가 한거임*/
                        fileDatas.forEach(file =>  dataTranster.items.add(file) );
                        inputtag.files = dataTranster.files;
 
                        let str1 = ` <div class="preview col">
-                                  <img width="100%" src="${e.target.result}">
-                                  <button type='button' class='bb'>올리지 않기</button>
-                                </div>`
+                                        <img width="100%" src="${e.target.result}">
+                                        <button type='button' class='bb'>올리지 않기</button>
+                                    </div>`
                        $(".main").html(str1)
                        $(".main").find('div:eq(0)').append(inputtag)
+                       $(".main").find('input').hide()
                        $(".imgInput").val("")
 
                    };
@@ -227,7 +235,7 @@ new DataTransfer();
                                   <img width="100%" src="${e.target.result}">
                                   <button type='button' class='bb'>올리지 않기</button>
                                 </div>`
-                       $(".imgpreviewinput").append(str1)
+                       $(".imgpreviewinput").prepend(str1)
                        // $(".imgpreviewinput").append(str)
                        $(".imgpreviewinput").find('div:eq(0)').prepend(inputtag)
                        $(".imgpreviewinput").find('input:eq(0)').hide()
