--- a/src/main/resources/templates/item/list.html
+++ b/src/main/resources/templates/item/list.html
@@ -9,16 +9,20 @@
 </head>
 <body>
 <th:block layout:fragment="content">
-    <div class="row">
+
+
+    <div class="row mt-3">
         <div class="col text-end">
-            <button class="btn btn-dark">제품등록</button>
+            <button class="btn btn-dark newproduct">제품등록</button>
         </div>
     </div>
-    <div class="row">
+
+    <div class="row mt-3">
         <div class="col">
             <th:block th:if="${not #lists.isEmpty(pageResponseDTO.dtoList)}">
 
-                <table class="table table-striped table-hover">
+
+                <table class="table  table-striped table-hover">
                     <thead>
                     <tr>
                         <td>#</td>
@@ -26,12 +30,14 @@
                         <td>작성자</td>
                         <td>등록일자</td>
                         <td>수정일자</td>
+                        <td>수정</td>
+                        <td>삭제</td>
                     </tr>
                     </thead>
-                    <th:block th:each="list: ${pageResponseDTO.dtoList}">
+                    <th:block  th:each="list: ${pageResponseDTO.dtoList}">
                         <tbody>
                         <tr class="align-middle">
-                            <td th:text="${list.id}"></td>
+                            <td  th:text="${list.id}"></td>
                             <td >
                                 <a th:href="@{/admin/item/read(id=${list.id})}">
                                     [[${list.itemNm}]]
@@ -49,7 +55,10 @@
                         </tr>
                         </tbody>
                     </th:block>
+
+
                 </table>
+
 
             </th:block>
             <th:block th:if="${#lists.isEmpty(pageResponseDTO.dtoList)}" >
@@ -61,36 +70,49 @@
     </div>
     <th:block th:if="${not #lists.isEmpty(pageResponseDTO.dtoList)}">
         <div class="row">
-            <div class="col">검색틀</div>
+            <div class="col">검색들</div>
             <div class="col">
                 <nav aria-label="Page navigation example">
                     <ul class="pagination">
                         <!--이전으로-->
                         <th:block th:if="${pageResponseDTO.prev}">
                             <li class="page-item"><a class="page-link" th:href="|@{'/admin/item/list?page=' +${pageResponseDTO.start-1}}|">Previous</a></li>
+
                         </th:block>
 
-                        <!--반복되는 페이지들 1~19-->
-                        <th:block th:each="num: ${#numbers.sequence(pageResponseDTO.start, pageResponseDTO.end)}">
+                        <!--반복되는 페이지들 1~10 -->
+                        <th:block th:each="num: ${#numbers.sequence(pageResponseDTO.start,pageResponseDTO.end)}">
                             <li class="page-item"><a class="page-link" th:href="|@{'/admin/item/list?page=' +${num}}|">[[${num}]]</a></li>
+
                         </th:block>
 
                         <!--다음으로-->
                         <th:block th:if="${pageResponseDTO.next}">
                             <li class="page-item"><a class="page-link" th:href="|@{'/admin/item/list?page=' +${pageResponseDTO.end+1}}|">Next</a></li>
                         </th:block>
+
                     </ul>
                 </nav>
             </div>
         </div>
     </th:block>
 
-    <script>
-        $(".newproduct").on("click", function (){
+    <script th:inline="javascript">
+        $(document).ready(function (){
+            $(".updateMoveBtn").on("click", function (){
+                location.href = "/admin/item/update?id=" + $(this).val();
+            })
+            $(".delMoveBtn").on("click", function (){
+                location.href = "/admin/item/update?id=" + $(this).val();
+            })
+        })
+
+        $(".newproduct").on("click", function () {
             location.href = "/admin/item/new";
         })
     </script>
 
 </th:block>
+
 </body>
 </html>
